--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-native",
     "react-native-component",
     "ios",
-    "android",
+    "android"
   ],
   "homepage": "https://github.com/Froelund/react-native-text-highlight",
   "bugs": "https://github.com/Froelund/react-native-text-highlight/issues",
