--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "react-native-text-highlight",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
-  "author": "Kristian Frølund",
+  "author": "",
   "keywords": [
     "react",
     "native",
@@ -22,7 +22,6 @@
   "scripts": {
     "test": "jest --no-cache"
   },
-  "author": "",
   "license": "MIT",
   "devDependencies": {
     "babel-jest": "^12.1.0",
@@ -30,5 +29,8 @@
     "jest-cli": "^12.1.1",
     "react-addons-test-utils": "^15.1.0",
     "react-dom": "^15.1.0"
+  },
+  "dependencies": {
+    "prop-types": "^15.6.0"
   }
 }
